# orchestra

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.cli.config.ts  vite.config.ts  vite.daemon.config.ts
.github/workflows/: native.yml  release.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: terminal-scrollback-lost.md
docs/: gtk-app.md  gtk4-exact-parity-plan.md  gtk4-parity-audit.md  gtk4-parity-inventory.md  gtk4-port-plan.md  gtk4-port-retro.md  gtk4-stylesheet-sweep.md  multi-machine-sandbox-remaining.md  native-ui-exploration.md  sandbox-env-contract.md  sandbox-two-host-checklist.md  t6-terminal-fidelity.md  ui-rpc-protocol.md
docs/adr/: 0001-sdk-structured-agent-view.md
docs/codebase-map/: accounts-usage-linear.md  accounts-usage.md  activity-pty-terminal.md  agent-view-design.md  browser-panel.md  build-release.md  git.md  hooks-cli-socket.md  linear.md  native-ui.md  renderer-ipc-ui.md  resources.md  sandbox-transport.md  self-tune.md  structured-agent-view.md  ui-rpc-backend.md  workspaces.md
docs/guide/: README.md  accounts-and-usage.md  cli.md  getting-started.md  integrations.md  multi-agent.md  review-and-ship.md  sandbox.md  self-improvement.md  workspaces.md
docs/plans/: sdk-agent-view-perf.md  sdk-structured-agent-view.md
docs/proposals/: linear-sidebar-A-vs-B.html  linear-tickets-in-sidebar.md
docs/spikes/: phase0-sdk-findings.md
docs/visual-reference/: CAPTURED-AT.json  DESIGN-SYSTEM-AUDIT.md  DIFF-NOTES.md  MAINPANE-OVERLAY-PARITY.md  README.md  T2-TYPE-SCALE.md  capture-electron-mainpane.sh  capture-electron.sh  capture-gtk-mainpane.sh  capture-gtk-transients.sh  capture-gtk.sh  capture-real-pair.sh  check-fresh.sh  drive-electron-mainpane.mjs  drive-electron.mjs  drive-gtk-mainpane.py  drive-gtk-transients.py  drive-gtk.py  measure-pair.py  measure-type-electron.mjs  measure-type-electron.sh  measure-type-gtk.py  measure-type-gtk.sh  paint-effect-probe.py  probe-alloc.py  prop-effect-probe.py  (+4 more)
native/: .gitignore  Cargo.toml  README.md  env.sh  orchestra-gtk-launcher.sh  setup-localdeps.sh
native/chime-gen/: Cargo.toml
native/chime-gen/src/: engine.rs  lib.rs  main.rs  recipes.rs
native/e2e/: README.md  fake-backend.mjs  harness.mjs  hover-parity.mjs  run.mjs
native/orchestra-gtk/: Cargo.toml  build.rs
native/orchestra-gtk/examples/: cell_size_probe.rs  feed_spike.rs  grid_probe.rs  minimal_probe.rs  replay_probe.rs  scrollback_query_probe.rs  split_recovery_probe.rs  sync_probe.rs  transition_probe.rs  webkit_isolation.rs  width_probe.rs
native/orchestra-gtk/scripts/: branch_picker_live.sh  migrate-confirm-e2e.sh  overlay_reachability.sh  overlay_reconnect.sh  reconnect_new_socket.sh  sidebar_e2e.sh  sidebar_late_attach.sh  sidebar_live_drive.sh  smoke-accounts.sh  smoke-webkit.sh  smoke.sh
native/orchestra-gtk/src/: app.rs  backend.rs  backend_fixtures.rs  ctx.rs  daemon.rs  dialogs.rs  icons.rs  lib.rs  main.rs  main_pane.rs  notify.rs  remote_control.rs  sound.rs  state.rs  theme.css  usage_limit.rs
native/orchestra-gtk/src/accounts/: badge.rs  logic.rs  login_modal.rs  login_web.rs  mod.rs  settings.rs  usage_bars.rs
native/orchestra-gtk/src/backend/: mock.rs
native/orchestra-gtk/src/banners/: mod.rs  queue.rs  sandbox.rs  setup.rs
native/orchestra-gtk/src/diff/: align.rs  language.rs  mod.rs
native/orchestra-gtk/src/modals/: linear.rs  mod.rs  repo_scripts.rs
native/orchestra-gtk/src/overlays/: help.rs  insights.rs  mod.rs  resources.rs  support.rs
native/orchestra-gtk/src/sidebar/: forest.rs  hosts.rs  mod.rs  pills.rs  rows.rs  widgets.rs
native/orchestra-gtk/src/terminal/: boot_pill.rs  fonts.rs  mod.rs  pane.rs  stack.rs
native/orchestra-gtk/src/toolbar/: branch_popover.rs  mod.rs
native/orchestra-rpc/: Cargo.toml
native/orchestra-rpc/fixtures/: README.md  binary.ptyData.json  event.accountLoginDone.json  event.accountUsageUpdate.json  event.accountsLoginUrl.json  event.agentContext.json  event.agentEvent.json  event.agentFinished.json  event.agentNeedsInput.json  event.agentTool.json  event.browserEvent.json  event.ptyExit.json  event.ptyRestart.json  event.ptyStopped.json  event.repoSyncState.json  event.reposUpdate.json  event.sandboxControl.json  event.selfTuneOutput.json  event.selfTuneUpdate.json  event.uiNotify.json  event.usageUpdate.json  event.workspaceAccountsUpdate.json  event.workspaceFocus.json  event.workspaceRemoved.json  event.workspaceUpdate.json  event.workspacesDeleteProgress.json  event.workspacesRemoved.json  manifest.json  method.addRepo.json  method.app-info.json  method.archiveWorkspace.json  method.checkLinearKey.json  method.clearLinearKey.json  method.deleteWorkspace.json  method.demoteWorkspace.json  method.deps-status.json  method.findPR.json  method.flushQueuedPrompts.json  method.getAccountUsage.json  method.getAllAccountUsage.json  (+58 more)
native/orchestra-rpc/src/: base64.rs  client.rs  events.rs  frame.rs  lib.rs  protocol.rs  types.rs
native/orchestra-rpc/src/types/: accounts.rs  app.rs  git.rs  linear.rs  mod.rs  repo.rs  resources.rs  self_tune.rs  usage.rs  workspace.rs
native/orchestra-rpc/tests/: client.rs  conformance.rs
native/packaging/: .gitignore  gen-icons.mjs  orchestra-gtk.desktop  package-lock.json  package.json
prototypes/gtk4-shell/: .gitignore  Cargo.toml  NOTES.md  env.sh  setup-localdeps.sh
prototypes/gtk4-shell/src/: main.rs
sandbox/: .dockerignore  Dockerfile  README.md  app-e2e.mjs
scripts/: dump-rpc-fixtures.ts  orchestra-launcher.sh  release.sh  resolve-css-append.mjs  swarm-dashboard.mjs  ticket-render-smoke.mjs  unmerged-agent-work.sh
(+237 files in other folders)
