[workspace]
resolver = "2"
members = ["orchestra-rpc", "orchestra-gtk"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# GTK stack (plan §7 pins). Rootless build on this machine: ./setup-localdeps.sh
# then `source env.sh` — see native/README.md.
gtk = { package = "gtk4", version = "0.11", features = ["v4_10"] }
relm4 = "0.11"
vte4 = "0.10"
sourceview5 = "0.11"
similar = "2"
async-channel = "2"
