[workspace]
resolver = "2"
members = ["orchestra-rpc", "orchestra-gtk"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# GTK stack (plan §7 pins). Rootless build on this machine: ./setup-localdeps.sh
# then `source env.sh` — see native/README.md.
gtk = { package = "gtk4", version = "0.11", features = ["v4_10"] }
relm4 = "0.11"
vte4 = "0.10"
# B3 (diff + toolbar): side-by-side diff panes + intra-line word diffs.
sourceview5 = "0.11"
similar = "2"
# OAuth login window (plan §5.4): WebKitGTK 6 bindings; 0.6.x is the release
# train paired with gtk4-rs 0.11. Needs webkitgtk6.0-devel + javascriptcoregtk
# from setup-localdeps.sh on rootless boxes.
webkit6 = "0.6"
async-channel = "2"
