[package]
name = "orchestra-gtk"
description = "Native GTK4 frontend for Orchestra (coexists with the Electron app)"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Compile-time switch for the fixture backend; ORCHESTRA_GTK_MOCK=1 selects it
# at run time without rebuilding.
mock = []

[dependencies]
orchestra-rpc = { path = "../orchestra-rpc" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
gtk.workspace = true
relm4.workspace = true
# Not used by the M1 skeleton yet: pinned now so the localdeps link chain is
# exercised from day one; first consumed by the M2 terminal workstream (B2).
vte4.workspace = true
# B3 (diff + toolbar): side-by-side diff panes and intra-line word diffs.
sourceview5.workspace = true
similar.workspace = true
# B4 (accounts/login): OAuth login window.
webkit6.workspace = true
async-channel.workspace = true
