[package]
name = "orchestra-gtk"
description = "Native GTK4 frontend for Orchestra (coexists with the Electron app)"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Compile-time switch for the fixture backend; ORCHESTRA_GTK_MOCK=1 selects it
# at run time without rebuilding.
mock = []

[dependencies]
orchestra-rpc = { path = "../orchestra-rpc" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
gtk.workspace = true
relm4.workspace = true
# The M2 terminal workstream (B2) consumes vte4. `v0_72` unlocks the newer VTE
# API the terminal pane needs (OSC-8 hyperlink resolution via
# `check_hyperlink_at`, added in v0_70) — the bundled VTE is 0.80.5, so the
# feature is safely present at link time.
vte4 = { workspace = true, features = ["v0_72"] }
# B3 (diff + toolbar): side-by-side diff panes and intra-line word diffs.
sourceview5.workspace = true
similar.workspace = true
# B4 (accounts/login): OAuth login window.
webkit6.workspace = true
async-channel.workspace = true
